--- a/l10n_it_sale/i18n/it.po
+++ b/l10n_it_sale/i18n/it.po
@@ -1,19 +1,20 @@
 # Translation of OpenERP Server.
 # This file contains the translation of the following modules:
-#	* l10n_it_sale
+# 	* l10n_it_sale
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-04-14 11:59+0000\n"
-"PO-Revision-Date: 2014-04-14 11:59+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2014-06-09 00:12+0100\n"
+"Last-Translator: Sergio Corato <sergiocorato@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. module: l10n_it_sale
 #: sql_constraint:sale.order:0
@@ -58,14 +59,15 @@ msgstr "Codice Cliente Univoco"
 
 #. module: l10n_it_sale
 #: sql_constraint:res.partner:0
-msgid "Error! Specified VAT Number already exists for any other registered partner."
+msgid ""
+"Error! Specified VAT Number already exists for any other registered partner."
 msgstr "Errore! Esiste già un partner con la stessa P.IVA."
 
 #. module: l10n_it_sale
 #: model:ir.actions.act_window,name:l10n_it_sale.action_transportation_condition_tree
 #: model:ir.ui.menu,name:l10n_it_sale.menu_action_transportation_condition_tree
 msgid "conditions for transportation"
-msgstr "conditions for transportation"
+msgstr "Condizioni di trasporto"
 
 #. module: l10n_it_sale
 #: model:ir.model,name:l10n_it_sale.model_stock_picking
@@ -79,8 +81,7 @@ msgstr "Errore: Numero BVR non valido (errato carattere di controllo)."
 
 #. module: l10n_it_sale
 #: model:ir.actions.act_window,name:l10n_it_sale.action_wizard_assign_ddt
-#: view:stock.picking:0
-#: view:wizard.assign.ddt:0
+#: view:stock.picking:0 view:wizard.assign.ddt:0
 msgid "Assign DDT"
 msgstr "Assegna DDT"
 
@@ -122,7 +123,7 @@ msgstr "Validità"
 #. module: l10n_it_sale
 #: view:stock.picking.transportation_condition:0
 msgid "Condition for transportation"
-msgstr "Condition for transportation"
+msgstr "Condizioni di trasporto"
 
 #. module: l10n_it_sale
 #: model:ir.model,name:l10n_it_sale.model_account_invoice
@@ -140,8 +141,7 @@ msgid "Shipping"
 msgstr "Trasporto"
 
 #. module: l10n_it_sale
-#: view:stock.picking:0
-#: field:stock.picking,ddt_number:0
+#: view:stock.picking:0 field:stock.picking,ddt_number:0
 msgid "DDT"
 msgstr "DDT"
 
