--- a/l10n_it_vat_registries/i18n/it.po
+++ b/l10n_it_vat_registries/i18n/it.po
@@ -1,19 +1,20 @@
 # Translation of OpenERP Server.
 # This file contains the translation of the following modules:
-#	* l10n_it_vat_registries
+# 	* l10n_it_vat_registries
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.3\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-11-30 16:28+0000\n"
-"PO-Revision-Date: 2011-11-30 17:33+0100\n"
-"Last-Translator: Lorenzo Battistini <lorenzo.battistini@agilebg.com>\n"
+"PO-Revision-Date: 2014-06-19 15:14+0100\n"
+"Last-Translator: Sergio Corato <sergiocorato@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. module: l10n_it_vat_registries
 #: code:addons/l10n_it_vat_registries/wizard/print_registro_iva.py:81
@@ -111,8 +112,7 @@ msgid "To date"
 msgstr "Alla data"
 
 #. module: l10n_it_vat_registries
-#: view:wizard.registro.iva:0
-#: field:wizard.registro.iva,journal_ids:0
+#: view:wizard.registro.iva:0 field:wizard.registro.iva,journal_ids:0
 msgid "Journals"
 msgstr "Sezionali"
 
@@ -151,7 +151,7 @@ msgstr "Localizzazione Italiana - Registri IVA"
 #. module: l10n_it_vat_registries
 #: model:ir.ui.menu,name:l10n_it_vat_registries.menu_registro_iva
 msgid "VAT Registries"
-msgstr "Stampe fiscali"
+msgstr "Stampe Registri IVA"
 
 #. module: l10n_it_vat_registries
 #: field:account.tax,exclude_from_registries:0
@@ -192,7 +192,3 @@ msgstr "account.tax"
 #: field:account.invoice,supplier_invoice_number:0
 msgid "Supplier invoice nr"
 msgstr "Fattura Fornitore nr"
-
-
-
-
