--- a/base_address_contacts/i18n/it.po
+++ b/base_address_contacts/i18n/it.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-13 22:00+0000\n"
-"PO-Revision-Date: 2014-04-13 22:00+0000\n"
+"POT-Creation-Date: 2014-07-08 08:25+0000\n"
+"PO-Revision-Date: 2014-07-08 08:25+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -17,15 +17,10 @@ msgstr ""
 
 #. module: base_address_contacts
 #: model:ir.actions.act_window,name:base_address_contacts.action_partner_contact_form
+#: model:ir.ui.menu,name:base_address_contacts.menu_partner_contact_form
 #: view:res.partner:0
 msgid "Contacts"
 msgstr "Contatti"
-
-#. module: base_address_contacts
-#: model:ir.ui.menu,name:base.menu_partner_contact_form
-#: view:res.partner:0
-msgid "Address"
-msgstr "Indirizzi"
 
 #. module: base_address_contacts
 #: field:res.partner.address.contact,first_name:0
@@ -36,6 +31,11 @@ msgstr "Nome"
 #: field:res.partner.address.contact,title:0
 msgid "Title"
 msgstr "Titolo"
+
+#. module: base_address_contacts
+#: model:ir.model,name:base_address_contacts.model_res_partner_title
+msgid "res.partner.title"
+msgstr "res.partner.title"
 
 #. module: base_address_contacts
 #: help:res.partner.address.contact,active:0
@@ -199,7 +199,7 @@ msgstr "Foto"
 #. module: base_address_contacts
 #: view:res.partner.address.contact:0
 msgid "Partner"
-msgstr "Fornitore"
+msgstr "Partner"
 
 #. module: base_address_contacts
 #: model:ir.model,name:base_address_contacts.model_res_partner_address
